unpackaged/main/default/objects/sked_Custom_Availability__c/sked_Custom_Availability__c.object-meta.xml
<CustomObject>
    <label>Custom Availability</label>
    <nameField>
        <displayFormat>CAVAIL-{000000}</displayFormat>
        <label>Custom Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>