unpackaged/main/default/objects/sked_Custom_Availability__c/fields/sked_Finish__c.field-meta.xml
<CustomField>
    <fullName>sked_Finish__c</fullName>
    <label>Finish</label>
    <type>DateTime</type>
</CustomField>