unpackaged/main/default/objects/sked_Custom_Availability__c/fields/sked_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Finish_Date__c</fullName>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>