unpackaged/main/default/objects/sked_Custom_Availability__c/fields/sked_Is_All_Day__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_All_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Day</label>
    <type>Checkbox</type>
</CustomField>