unpackaged/main/default/objects/sked_Custom_Availability__c/fields/sked_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>