unpackaged/main/default/objects/sked_Custom_Availability__c/fields/sked_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Custom Availabilities</relationshipLabel>
    <relationshipName>sked_Custom_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>