unpackaged/main/default/objects/sked_Custom_Availability__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>On Call</fullName>
                <isActive>false</isActive>
                <label>On Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>