unpackaged/main/default/objects/sked_Custom_Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Start__c</columns>
    <columns>sked_Finish__c</columns>
    <columns>sked_Status__c</columns>
    <columns>sked_Type__c</columns>
    <columns>sked_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>